--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(object_recognition_tabletop)
 
 find_package(catkin REQUIRED ecto cmake_modules
                              moveit_core object_recognition_core object_recognition_msgs opencv_candidate
-                             pluginlib rosconsole roscpp shape_msgs tf)
+                             pluginlib rosconsole roscpp shape_msgs shape_tools tf)
 catkin_package()
 
 # deal with Python
